# simply-bind

./: .gitattributes  .gitignore  .pnp.cjs  README.md  index.html  package.json
sidecar/: README.md  build.py  requirements.txt
sidecar/scripts/: build.py
sidecar/src/: app.py
sidecar/src/helper/: __init__.py
src/: App.tsx  main.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/components/: CollectionItem.tsx  CollectionList.tsx  FileUpload.tsx  SystemLog.tsx
src/config/: index.ts
src/helpers/: index.ts
src/types/: index.ts  types.d.ts
