[package]
name = "img-to-pdf-converter"
version = "0.1.0"
description = "A simple app for converting a collection of images into a PDF"
authors = ["Hoon Kim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "fs-read-file", "dialog-all", "path-all", "fs-read-dir", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
zip = "0.5"
image = "0.24.6"
printpdf = "0.3.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
