[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Hoon Kim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "img_to_pdf_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-fs = "2.0.3"
tauri-plugin-dialog = "2.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persisted-scope = { version = "2.0.0-rc" }
zip = "0.5"
image = "0.23"
printpdf = "0.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
